@@ -27,7 +27,6 @@ sig
     specialize: bool,
     skolemize: bool,
     star_linear_preds: bool,
-    uncurry: bool,
     fast_descrs: bool,
     tac_timeout: Time.time option,
     evals: term list,
@@ -238,7 +237,6 @@ type hol_context = {
   specialize: bool,
   skolemize: bool,
   star_linear_preds: bool,
-  uncurry: bool,
   fast_descrs: bool,
   tac_timeout: Time.time option,
   evals: term list,
